# Arc

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
arc/: __init__.py  clipboard.py
arc/agent/: __init__.py  loop.py  prompts.py  registry.py  runner.py  worker_log.py
arc/browser/: __init__.py  accessibility.py  actions.py  engine.py  human.py  snapshot.py
arc/cli/: __init__.py  bootstrap.py  main.py
arc/core/: __init__.py  bus.py  config.py  errors.py  escalation.py  events.py  foreground_turns.py  kernel.py  registry.py  run_control.py  types.py
arc/gateway/: __init__.py  server.py
arc/identity/: __init__.py  personality.py  setup.py  soul.py
arc/install/: __init__.py  bootstrap.py  health.py  launcher.py  paths.py  python_runtime.py  types.py
arc/liquid/: __init__.py  extract.py  pool.py  renderer.py  server.py  tavily.py
arc/llm/: __init__.py  base.py  factory.py  mock.py  ollama.py  openai_compat.py  responses.py
arc/mcp/: __init__.py  client.py  config_service.py  gateway.py  manager.py  skill.py
arc/memory/: __init__.py  compaction.py  context.py  embedding.py  long_term.py  manager.py  session.py
arc/middleware/: __init__.py  base.py  cost.py  logging.py
arc/notifications/: __init__.py  base.py  router.py
arc/scheduler/: __init__.py  engine.py  job.py  store.py  triggers.py
arc/screen/: __init__.py  recorder.py
arc/security/: __init__.py  approval.py  engine.py
arc/shell/: base.py  bash.py  detect.py  powershell.py
arc/skills/: __init__.py  base.py  loader.py  manager.py  router.py
arc/store/: __init__.py  base.py  memory.py  sqlite.py
arc/tasks/: __init__.py  agents.py  processor.py  skill.py  store.py  types.py
arc/voice/: __init__.py  condenser.py  daemon.py  listener.py  overlay.py  synthesizer.py  transcriber.py
arc/workflow/: __init__.py  engine.py  loader.py  skill.py  types.py
arc/workspace/: __init__.py  models.py
architecture/: index.html
capabilities/build-your-own-skill/: index.html
capabilities/mcp/: index.html
capabilities/overview/: index.html
capabilities/skills/: index.html
cli/: index.html
configuration/: index.html
docs/: architecture.md  cli.md  configuration.md  getting-started.md  index.md
getting-started/: index.html
scripts/: __init__.py
search/: search_index.json
tests/: conftest.py
(+176 files in other folders)
